--- a/assets/css/checkout.css
+++ b/assets/css/checkout.css
@@ -285,14 +285,19 @@ label[for="shipping_method_0_drive"],
 
 .shopengine-loader .spinner {
     border: 4px solid rgba(0,0,0,.1);
-    width: 36px;
-    height: 36px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
-    border-top: 4px solid #000;
+    border-top: 2px solid #000;
     animation: spin 2s linear infinite;
 }
 
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+
+
+#km-checkout-errors, .km-validation-info{
+    color:red;
 }
