--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -122,3 +122,50 @@ color:#BE9E67 !important;
     display: block;
     font-size: 13px;
 }
+/* Panier */
+.shopengine-cart .e-cart__column-start{}
+.shopengine-cart .e-cart__column-end .e-cart__column-inner .e-cart-section .cart-collaterals .cart_totals h2{color: #262626;font-family: "Arca Majora 3", Sans-serif;font-size: 32px;font-weight: 900;line-height: 1.2em;width: fit-content;position: relative;z-index: 1;}
+.shopengine-cart .e-cart__column-end .e-cart__column-inner .e-cart-section .cart-collaterals .cart_totals h2:after{content: '';width: 100%;display: block;position: absolute;height: 25px;background: #D9D9D9;transform: rotate(-0.21deg);bottom: 2px;z-index: -1;}
+.shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container{grid-template-columns: 70% auto;}
+.shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .e-cart__column-end{width: 320px;}
+.shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .e-cart__column.e-cart__column-end{}
+.shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .e-cart__column-end{position: sticky;top: 0px;}
+.shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .e-cart__column-end .e-sticky-right-column .e-cart-totals{box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.5);}
+.shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .e-cart__column-end .e-sticky-right-column .e-cart-totals .wc-proceed-to-checkout{position:relative;padding-bottom: 70px;}
+.shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .e-cart__column-end .e-sticky-right-column .e-cart-totals .wc-proceed-to-checkout:after{content: "";background:url('/wp-content/uploads/2023/11/rassurance-1.jpg');background-size:280px 46px;width: 280px;height: 46px;position: absolute;bottom: 4px;left: -10px;}
+.shopengine-cart .e-shop-table .shop_table .km-ecotaxe-row{border-top: 1px solid #D9D9D9;}
+.shopengine-cart .e-shop-table .shop_table .km-ecotaxe-row .km-ecotaxe-message p{font-family:Lato;font-size:16px;color:#4D4D4D;margin-left:10px;}
+.shopengine-cart .e-shop-table .shop_table tr td.actions{border:none !important;}
+@media (max-width: 768px) {
+    /* Panier */
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container{display: block;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .e-shop-table{padding:0px;}
+    .woocommerce table.shop_table_responsive tr td, .woocommerce-page table.shop_table_responsive tr td{text-align: left !important;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item{position:relative;padding: 0px;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item::after {content: "";display: table;clear: both;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item td.product-remove{position:absolute;top:0px;right:0px;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item td.product-thumbnail{display:block !important;float: left;margin-right: 10px;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item td.product-thumbnail:before{display:none;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item td.product-thumbnail img{width: 90px;height: 160px !important;object-fit: cover;object-position: center;border-radius: 4px;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item td.product-name{float: left;width:60%;padding-bottom: 0px;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item td.product-name:before{display:none;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item td.product-price{display:none;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item td.product-quantity{float: left;width:60%;padding: 20px 0px 0px 0px;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item td.product-quantity:before{display:none;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item td.product-quantity .quantity{justify-content: left;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item td.product-subtotal{float: left;width:60%;padding: 20px 0px 0px 0px;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr.cart_item td.product-subtotal:before{display:none;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr:not(.cart_item) td.km-ecotaxe-row:before{display:none;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .shop_table_responsive tr:not(.cart_item){padding:16px 0px;}
+    .shopengine-cart .elementor-widget-woocommerce-cart .e-cart__container .e-cart__column-end{width: 100%;}
+    /* Panier grille produits */
+    .shopengine-cart  .affiche-produit .elementor-widget-container{display: flex;overflow-x: auto;scroll-snap-type: x mandatory;scrollbar-color: #BE9D68 #BE9D68;max-width: inherit !important;}
+    .shopengine-cart .affiche-produit .elementor-widget-container::-webkit-scrollbar {height: 6px;}
+    .shopengine-cart .affiche-produit .elementor-widget-container::-webkit-scrollbar-track {background: #d9d9d9;border-radius: 10px;}
+    .shopengine-cart .affiche-produit .elementor-widget-container::-webkit-scrollbar-thumb {background-color: #BE9D68;border-radius: 10px;}
+    .shopengine-cart .affiche-produit .products{display: flex;flex-wrap: nowrap;gap: 10px;}
+    .shopengine-cart .affiche-produit .products li{flex: 0 0 auto;scroll-snap-align: start;max-height: 300px;width: 200px !important;}
+    .shopengine-cart .affiche-produit .uael-woo-products-thumbnail-wrap {max-height: 150px;overflow: hidden;}
+    .shopengine-cart .affiche-produit .uael-woo-products-summary-wrap {max-height: 150px;}
+    .shopengine-cart .affiche-produit .uael-woo-products-thumbnail-wrap img {max-height: 100%;object-fit: cover;}
+  }
