--- a/style.css
+++ b/style.css
@@ -115,9 +115,9 @@ Provisoire
   border: none!important;
 }
 
-
-
-
+.woocommerce div.product .price.out-of-stock{
+  color:red !important;
+}
 
 .km-ecotaxe-message{
   display: flex;
@@ -449,6 +449,7 @@ ul#menu-2-bc4d358 .menu-item-121569 > a, ul#menu-2-bc4d358 .menu-item-121571 > a
 .archive .grille-categorie li.product span.price span.woocommerce-Price-amount{color:#BE9D68;}
 .archive .elementor-widget-text-editor .elementor-widget-container p a,.archive .elementor-widget-text-editor .elementor-widget-container h2 a{color:#BE9D68;}
 /* Single Produit */
+.single-product #pa_variation-conditionnement{width:inherit;}
 .single-product .verified-review {display: flex;flex-direction: row;align-items: center;justify-content: flex-start;width: fit-content;}
 .single-product .verified-review > img{width:40px;}
 .single-product .verified-review .headerStars{margin-left: 5px;}
@@ -559,32 +560,6 @@ ul#menu-2-bc4d358 .menu-item-121569 > a, ul#menu-2-bc4d358 .menu-item-121571 > a
 
 
 
-
-
-
-
-
-
-
-
-
-/* Produit single */
-.single-product #pa_variation-conditionnement{width:inherit;}
-
-
-
- /* ancien css Agence-88 */
- .yellow {color: #BE9E67;}
-
-
-
-body.modal-open{overflow: hidden!important;}
-.km-modal { z-index: 1000000;display: none;position: fixed;left: 0;top:0;width: 100%; height: 100%;overflow: auto;background-color: rgba(0,0,0,0.55); justify-content:center;align-items: center;}
-.km-modal.active{ display: flex;}
-.km-modal-dialog{ background-color: #fff;position: relative;outline: 0;border-radius: 5px;width: 520px;padding: 45px 60px;text-align: center;}
-.km-modal-dialog .km-modal-header{ margin-bottom: 25px;}
-.km-modal-close{ position: absolute;right: 15px;top:15px;border: none;display: inline-block; vertical-align: middle;  overflow: hidden;    height: 20px;    width: 20px;    text-decoration: none;    text-align: center;    cursor: pointer;    white-space: nowrap;    border:none;}
-
 /* RESPONSIVE */
 @media (max-width: 1024px) {
   /* Mon compte */
@@ -618,8 +593,103 @@ body.modal-open{overflow: hidden!important;}
   .page-id-50.woocommerce-view-order .order-details-row{flex-direction: column;gap: 10px;}
   .page-id-50.woocommerce-view-order .order-status-tracker {flex-direction: column;}
   /* Menu mobile footer */
-    .footer .elementor-widget-wrap ul.elementor-icon-list-items, .footer .elementor-nav-menu{display: none;}
-    .footer .retractable.active .elementor-heading-title{color:#BE9D68 !important;}
-    .footer .retractable::after {content: url('/wp-content/uploads/2023/11/fleche-footer-bas.png');position: absolute;top:0px;right: 0px;width: 16px;height: 9px;transition: transform 0.3s ease;}
-    .footer .retractable.active::after {content: url('/wp-content/uploads/2023/11/fleche-footer-haut.png');}
+  .footer .elementor-widget-wrap ul.elementor-icon-list-items, .footer .elementor-nav-menu{display: none;}
+  .footer .retractable.active .elementor-heading-title{color:#BE9D68 !important;}
+  .footer .retractable::after {content: url('/wp-content/uploads/2023/11/fleche-footer-bas.png');position: absolute;top:0px;right: 0px;width: 16px;height: 9px;transition: transform 0.3s ease;}
+  .footer .retractable.active::after {content: url('/wp-content/uploads/2023/11/fleche-footer-haut.png');}
 }
+
+
+
+
+
+
+ /* ancien css Agence-88 */
+ .yellow {color: #BE9E67;}
+body.modal-open{overflow: hidden!important;}
+.km-modal{ z-index: 1000000;display: none;position: fixed;left: 0;top:0;width: 100%; height: 100%;overflow: auto;background-color: rgba(0,0,0,0.55); justify-content:center;align-items: center;}
+.km-modal.active{ display: flex !important;}
+.km-modal-dialog{ background-color: #fff;position: relative;outline: 0;border-radius: 5px;width: 520px;padding: 45px 60px;text-align: center;}
+.km-modal-dialog .km-modal-header{ margin-bottom: 25px;}
+.km-modal-close{ position: absolute;right: 15px;top:15px;border: none;display: inline-block; vertical-align: middle;overflow: hidden;height: 20px;width: 20px;text-decoration: none;text-align: center;cursor: pointer;white-space: nowrap;border:none;}
+
+
+@media screen and (max-width:766px){
+  .invisible-on-mobile{display:none}
+  .entete-tab-commande div,.order .colonne-commande{width:33%!important}
+  .colonne-commande.woocommerce-orders-table__cell.woocommerce-orders-table__cell-order-actions,.colonne-commande.woocommerce-orders-table__cell.woocommerce-orders-table__cell-order-total{display:none}
+  .total-commande-mobile{font-family:'Arca Majora 3';font-style:normal;font-weight:700;font-size:16px;text-transform:uppercase;color:#000}
+  .woocommerce-Price-amount.amount{font-family:Lato;font-style:normal;font-weight:400;font-size:16px;color:#000}
+  .woocommerce-button.wp-element-button.button.invoice{width:65%!important;margin-top:5%}
+}
+@media screen and (min-width:767px){
+  .invisible-on-desktop{display:none!important}
+}
+@media screen and (max-width:768px){
+  .affiche-produit .uael-woo-skin-grid-franko .uael-product-actions{display:none}
+}
+.affiche-produit .uael-woocommerce .uael-loop-product__link{position:relative;z-index:99}
+.affiche-produit .woocommerce-loop-product__title{text-align:center}
+.elementor-6 .elementor-element.elementor-element-c488d8e .uael-woo-product-wrapper{background:#f5f5f5}
+.affiche-produit .uael-woocommerce ul.products li.product .woocommerce-loop-product__link img{border-radius:5px;filter:drop-shadow(0 4px 8px rgba(0, 0, 0, .25))}
+.affiche-produit .uael-woo-skin-grid-franko .uael-product-actions .uael-action-item-wrap{background:linear-gradient(180deg,#be9e67 0,#a98951 100%)}
+.affiche-produit .uael-woo-skin-grid-franko .uael-product-actions .uael-action-item{color:#ffff}.menu-desktop .sub-menu{border-radius:5px!important}
+.menu-desktop .sub-menu li:first-child{border-radius:5px 5px 0 0!important}.menu-desktop .sub-menu li:last-child{border-radius:0 0 5px 5px!important}
+.elementor-widget-woocommerce-cart .woocommerce table.shop_table.cart .actions .button{background:0 0;color:#be9e67;border:none}
+.elementor-widget-woocommerce-cart .woocommerce table.shop_table.cart .actions .button:hover{background:0 0;color:#be9e67;border:none}
+.coupon.e-cart-section.shop_table{border:none}.coupon-col-start input{border:1px solid #000!important}
+.button.e-apply-coupon{border:none!important}
+.elementor-753 .elementor-element.elementor-element-f889fe8 .uael-post__header-filters{padding-bottom:0!important;border-bottom:1px solid #000!important;border-top:1px solid #000}
+.uael-post__bg-wrap,.uael-post__thumbnail{border-radius:10px}
+.uael-post__terms-wrap{text-align:center;margin-top:-55px}.uael-post__title{text-align:center;margin-top:40px}
+.uael-post__meta-data{position:absolute;margin-left:135px;margin-top:-75px}
+table tbody>tr:nth-child(odd)>td,table tbody>tr:nth-child(odd)>th{background-color:#f5f5f5}
+.woocommerce-variation.single_variation{display:none}
+.woocommerce-MyAccount-navigation{border:1px solid rgba(217,217,217,.1);box-shadow:0 4px 4px rgba(0,0,0,.1);border-radius:5px}
+hr{border:1px solid #d1d1d1}
+.entete-account-navigation{background-color:#ffff;padding:5%}
+.my-account-title{font-family:'Arca Majora 3';font-style:normal;font-weight:900;font-size:32px;color:#000;width:80%}
+.username-account{font-family:Lato;font-style:normal;font-weight:400;font-size:16px;color:#000;margin-bottom:5%}
+.woocommerce-MyAccount-navigation-link.woocommerce-MyAccount-navigation-link--customer-logout a{color:#be9e67!important;text-decoration:underline}
+.woocommerce-MyAccount-navigation .is-active a{font-family:'Arca Majora 3'!important;font-style:normal;font-weight:700!important;font-size:16px!important;color:#000}
+.woocommerce-MyAccount-navigation-link.woocommerce-MyAccount-navigation-link--dashboard,.woocommerce-MyAccount-navigation-link.woocommerce-MyAccount-navigation-link--downloads{display:none!important}
+.entete-tab-commande{display:flex}.entete-tab-commande div{font-family:'Arca Majora 3';font-style:normal;font-weight:700;font-size:16px;text-transform:uppercase;color:#000;width:20%}
+.titre-entete-facture{text-align:end}.order .colonne-commande{width:20%;font-family:Lato;font-style:normal;font-weight:400;font-size:16px;color:#000}
+.accordion{font-family:Lato;font-style:normal;font-weight:400;color:#be9e67!important;cursor:pointer;width:100%;border:none;text-align:left;outline:0;font-size:16px;transition:1s;text-decoration:underline!important}
+.panel{padding:18px;display:none;overflow:hidden;border:1px solid #be9e67;border-radius:5px}
+.panel .bloc-commande-detail{display:flex;margin-top:2%}
+.bloc-commande-detail .col-1{width:75%}
+.bloc-commande-detail .col-1 .intitule{font-family:Lato;font-style:normal;font-weight:700;font-size:16px;color:#000}
+.bloc-commande-detail .col-1 .info-commande,.bloc-commande-detail .col-2 .detail-commande{font-family:Lato;font-style:normal;font-weight:400;font-size:16px;color:#000}
+.bloc-commande-detail .col-2{width:25%}
+.bloc-commande-detail .col-2 .total-commande{font-family:Lato;font-style:normal;font-weight:400;font-size:16px;color:#be9e67}
+.woocommerce-button.wp-element-button.button.view{display:none}
+.woocommerce-button.wp-element-button.button.invoice{background:linear-gradient(180deg,#be9e67 0,#a98951 100%)!important;border-radius:5px!important;border:none!important;color:#ffff!important;font-family:'Arca Majora 3';font-style:normal;font-weight:700;font-size:16px;width:100%;text-align:center;padding:8px 24px!important}
+.woocommerce-button.wp-element-button.button.invoice:hover{background:#8c703f!important}
+.compte-adresse-title,.compte-infos-perso-title,.compte-mdp-title{font-family:Lato;font-style:normal;font-weight:700!important;font-size:20px;color:#000!important;margin-bottom:0!important;margin-top:0!important}
+.elementor-widget-woocommerce-my-account .e-my-account-tab:not(.e-my-account-tab__dashboard--custom) .woocommerce .u-columns{margin-top:50px!important}
+.woocommerce-Address-title.title{display:flex!important;align-items:center}
+.woocommerce-Address-title.title .adresses h3{font-family:'Arca Majora 3';font-style:normal;font-weight:700;font-size:16px;text-transform:uppercase;color:#000;margin-bottom:0!important}
+.woocommerce-Address-title.title .modifier-adresses a{position:inherit!important;margin-top:0!important;font-family:Lato;font-style:normal;font-weight:400;font-size:16px;text-decoration-line:underline;color:#be9e67!important}
+.elementor-widget-woocommerce-my-account .e-my-account-tab:not(.e-my-account-tab__dashboard--custom) .woocommerce-Address address,.elementor-widget-woocommerce-my-account .e-my-account-tab:not(.e-my-account-tab__dashboard--custom) .woocommerce-Addresses address{font-family:Lato;font-style:italic;font-weight:500;font-size:16px;color:#474747;padding:16px 30px 16px 0!important}
+.text-mdp{font-family:Lato;font-style:normal;font-weight:400;font-size:16px;color:#000}
+.wishlist-title{display:flex;align-items:center}.wishlist-title h2{margin-top:0!important;margin-bottom:0!important;font-family:'Arca Majora 3';font-style:normal;font-weight:700;font-size:20px;color:#000}
+.entete-tableau-favoris{display:flex}
+.entete-tableau-favoris .product-name,.entete-tableau-favoris .product-price{width:50%;font-family:'Arca Majora 3';font-style:normal;font-weight:700;font-size:16px;text-transform:uppercase;color:#262626}
+.tableau-favoris{display:flex;align-items:center;margin-top:2%;margin-bottom:5%}.tableau-favoris .product-thumbnail{width:10%}
+.tableau-favoris .product-thumbnail a img{border-radius:5px}
+.tableau-favoris .product-name{width:40%;padding-left:2%}
+.tableau-favoris .product-name,.tableau-favoris .product-name a{font-family:Lato;font-style:normal;font-weight:400;font-size:16px;color:#262626!important}
+.tableau-favoris .product-price{width:20%;font-family:'Arca Majora 3';font-style:normal;font-weight:700;font-size:16px;color:#262626!important}
+.tableau-favoris .product-add-to-cart{width:30%;display:flex;align-items:center;flex-direction:row-reverse}
+.tableau-favoris .product-add-to-cart .remove_from_wishlist.button{width:20%;background:0 0;border:none!important}
+.tableau-favoris .product-add-to-cart .add_to_cart.alt{width:50%;background:linear-gradient(180deg,#be9e67 0,#a98951 100%)!important;border-radius:5px!important;padding:8px 15px!important;color:#ffff!important;text-decoration:none;font-family:'Arca Majora 3';font-style:normal;font-weight:700;font-size:16px}
+.tableau-favoris .product-add-to-cart .add_to_cart.alt:hover{background:#8c703f!important}
+.shopengine-quickview-trigger.se-btn{width:1%!important}
+.shopengine-quickview-trigger.se-btn i{display:none}
+section.elementor-section.elementor-top-section.elementor-element.elementor-element-2130c13d.elementor-section-boxed.elementor-section-height-default.elementor-section-height-default{margin:0}
+section.elementor-section.elementor-top-section.elementor-element.elementor-element-2130c13d.elementor-section-boxed.elementor-section-height-default.elementor-section-height-default .elementor-widget-wrap.elementor-element-populated{padding-top:0!important}.shopengine-multistep-footer{display:none}
+button.shopengine_add_to_list_action.shopengine-wishlist.badge.inactive{display:none}
+
+
+
