--- a/assets/css/product-filters.css
+++ b/assets/css/product-filters.css
@@ -248,3 +248,6 @@ input[type="range"] {
     height: 0;
     z-index: 1;
 }
+
+.km-product-filters_close {position: absolute;top: 10px;right: 10px;cursor: pointer;}
+.close-icon {font-weight: bold;font-size: 20px;}
